--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Sunny",
+  "name": "sunny",
   "private": true,
   "version": "0.0.1",
   "type": "module",
@@ -12,14 +12,17 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@capacitor/android": "^6.2.0",
     "@capacitor/app": "6.0.2",
     "@capacitor/core": "6.2.0",
+    "@capacitor/geolocation": "^6.1.0",
     "@capacitor/haptics": "6.0.2",
     "@capacitor/keyboard": "6.0.3",
     "@capacitor/status-bar": "6.0.2",
     "@ionic/vue": "^8.0.0",
     "@ionic/vue-router": "^8.0.0",
     "ionicons": "^7.0.0",
+    "native-run": "^2.0.1",
     "vue": "^3.3.0",
     "vue-router": "^4.2.0"
   },
@@ -39,5 +42,5 @@
     "vitest": "^0.34.6",
     "vue-tsc": "^2.1.10"
   },
-  "description": "An Ionic project"
+  "description": "Simple weather app"
 }
