--- a/package.json
+++ b/package.json
@@ -19,12 +19,12 @@
     "@capacitor/geolocation": "^7.0.0",
     "@capacitor/haptics": "^7.0.0",
     "@capacitor/keyboard": "^7.0.0",
-    "@capacitor/preferences": "^7.0.0",
     "@capacitor/status-bar": "^7.0.0",
     "@ionic/vue": "^8.0.0",
     "@ionic/vue-router": "^8.0.0",
     "ionicons": "^7.0.0",
     "native-run": "^2.0.1",
+    "pinia": "^3.0.1",
     "vue": "^3.3.0",
     "vue-router": "^4.2.0"
   },
